fix(x4p4): update text and linting

--- a/exercise4/pages/004.html
+++ b/exercise4/pages/004.html
@@ -4,9 +4,14 @@
     </template>
     <template slot="right">
         <page-title :title="pageTitle"></page-title>
-        <p>The worst – and I mean the worst – statement I ever hear is when people say, “We have to get back to the basics.”</p>
-        <p>I despair when I hear a national sports coach say they need to get back to the basics. My question to them is, “Why did you ever leave the basics?” </p>
-        <p>The basics work, so stick to them. Now and then they need a tweak; very rarely do they need a significant overhaul.
+        <p>
+            The worst – and I mean the worst – statement that I ever hear is when people say, “We have to get back to the basics.”
+        </p>
+        <p>
+            I despair when I hear a national sports coach say they need to get back to the basics. My question to them is, “Why did you ever leave the basics?”
+        </p>
+        <p>
+            The basics work, so stick to them. Now and then they need a tweak; very rarely do they need a significant overhaul.
         </p>
     </template>
 </content-box>
