fix(x8p2): update text and linting

--- a/exercise8/pages/002.html
+++ b/exercise8/pages/002.html
@@ -4,8 +4,11 @@
     </template>
     <template slot="right">
         <page-title :title="pageTitle"></page-title>
-        <p>The seventh of Coach Mark's Great Eight is about looking after your health and fitness. High performers don’t have a choice when it comes to health and fitness. </p>
-        <p>You must maintain a work/life balance, a reasonable level of fitness, and energise yourself with quality nutrition. This is self-explanatory: a healthy mind needs a healthy body.
+        <p>
+            The seventh of Coach Mark's Great Eight is about looking after your health and fitness. High performers don’t have a choice when it comes to health and fitness.
+        </p>
+        <p>
+            You must maintain a work/life balance, a reasonable level of fitness, and energise yourself with quality nutrition. Being healthy is self-explanatory: a healthy mind needs a healthy body.
         </p>
     </template>
 </content-box>
