fix(x8p4): update text and linting

--- a/exercise8/pages/004.html
+++ b/exercise8/pages/004.html
@@ -4,8 +4,11 @@
     </template>
     <template slot="right">
         <page-title :title="pageTitle"></page-title>
-        <p>If you need motivating to look after your wellbeing, then watch your children sleep, share a sunset with the one you love, visit your mother – she does not want you to die before she does.</p>
-        <p>You should also consider the benefits of wellbeing. You will enjoy your work more, cope better with the pressures that come with the job, live longer and maximise your life. It’s a no-brainer really. As Spock always said, “Live long and prosper.”
+        <p>
+            If you need motivating to look after your wellbeing, then watch your children sleep, share a sunset with the one you love, visit your mother – she does not want you to die before she does.
+        </p>
+        <p>
+            You should also consider the benefits of wellbeing. You will enjoy your work more, cope better with the pressures that come with the job, live longer and maximise your life. It’s a no-brainer. As Spock always said, “Live long and prosper.”
         </p>
     </template>
 </content-box>
