fix(x8p5): update text

--- a/exercise8/pages/005.html
+++ b/exercise8/pages/005.html
@@ -14,7 +14,7 @@
             The second is a guide to <a :href="root+'/images/pdf/sleep.pdf'" target="_blank">12 ways to improve sleep</a>.
         </p>
         <p>
-            These are both excellent resources that will compliment your preparation for the Wellbeing Plan you have in this module.
+            These are both excellent resources that will complement your preparation for the Wellbeing Plan you have in this module.
         </p>
     </template>
 </content-box>
