fix(x8p6): update text and linting

--- a/exercise8/pages/006.html
+++ b/exercise8/pages/006.html
@@ -4,8 +4,11 @@
     </template>
     <template slot="right">
         <page-title :title="pageTitle"></page-title>
-        <p>Now it's time to turn thoughts to action, with help of the support resources and words from Coach Mark it’s time to start your three week plan.</p>
-        <p>We have provided you with a three week structure, so you can identify what you will do and how you will do it.
+        <p>
+            Now it's time to turn thoughts to action, with the help of the support resources and words from Coach Mark it’s time to start your three-week plan.
+        </p>
+        <p>
+            We have provided you with a three-week structure, so you can identify what you will do and how you will do it.
         </p>
     </template>
 </content-box>
