fix(x9p): update text

--- a/exercise9/pages/002.html
+++ b/exercise9/pages/002.html
@@ -4,10 +4,15 @@
     </div>
     <div class="col-xs-12 col-sm-6 v3-text-col">
         <page-title :title="pageTitle"></page-title>
-        <p>The eighth of Coach Mark's Great Eight is about having the mindset of succeeding. If you don’t back yourself, no-one else will. Here is a quote I put together myself in my sport coaching days.</p>
-        <p>Great champions are never surprised by victory: they plan for it and expect it. </p>
+        <p>
+            The eighth of Coach Mark's Great Eight is about having the mindset of success. If you don’t back yourself, no-one else will. Here is a quote I put together myself in my sport coaching days.
+        </p>
+        <p>
+            Great champions are never surprised by victory: they plan for it and expect it.
+        </p>
         <p>And my belief is the same with business people.</p>
-        <p>Great business people are never surprised by success: they plan for it and expect it.
+        <p>
+            Great business people are never surprised by success: they plan for it and expect it.
         </p>
       
     </div>
