fix(x10p4): update text

--- a/exercise10/pages/004.html
+++ b/exercise10/pages/004.html
@@ -1,9 +1,18 @@
 <content-box>
     <page-title-center :title="pageTitle"></page-title-center>
-    <p>Once you have completed all tasks, you are ready to start week Five, the final week of the Sport of Business program.</p>
-    <p>In this week five, we will explore Coach Marks Six C’s for Business Performance. </p>
-    <p>Mark has also identified through his many years of working in both high-performance sport and business his Six Elements to Creating a Successful Mindset. These will also be covered, and compliment Coach Marks Six C’s.</p>
-    <p>Lastly, Coach Mark will share his expertise on creating and maintaining a success log.</p>
-    <p>We look forward to working through this content with you, see you soon.
+    <p>
+        Once you have completed all tasks, you are ready to start week five, the final week of the Sport of Business program.
+    </p>
+    <p>
+        In this week five, we will explore Coach Mark's Six Cs for business performance.
+    </p>
+    <p>
+        Mark has also identified through his many years of working in both high-performance sport and business his Six Elements to creating a successful mindset which gets covered, and compliment Coach Mark's Six Cs.
+    </p>
+    <p>
+        Lastly, Coach Mark will share his expertise in creating and maintaining a success log.
+    </p>
+    <p>
+        We look forward to working through this content with you, see you soon.
     </p>
 </content-box>
