fix(x9p3): update text and linting

--- a/exercise9/pages/003.html
+++ b/exercise9/pages/003.html
@@ -1,8 +1,10 @@
 <activity-box type="Activity" two-column="true">
   <template slot="left">
     <page-title :centered="false" :title="pageTitle"></page-title>
-    <p>This one is super simple; Coach Mark just wants you to follow through with the exercises One to Seven.</p>
-<textbox id="pg003" label="Please write down your goal of committing to these exercises." placeholder="I ___________ will commit to exercises 1 – 7 and this is why..."></textbox>
+    <p>
+      This one is super simple; Coach Mark wants you to follow through with the exercises One to Seven.
+    </p>
+    <textbox id="pg003" label="Please write down your goal of committing to these exercises." placeholder="I ___________ will commit to exercises 1 – 7 and this is why..."></textbox>
   </template>
   <template slot="right">
     <image-block :alt="alt" :image=image :root=root></image-block>
