fix(x8CSS): make pdf view behave better at fullscreen

--- a/exercise8/pages/005.html
+++ b/exercise8/pages/005.html
@@ -19,8 +19,7 @@
     </template>
 </content-box>
 <modal :content="modalProps">
-    <div class ="col-xs-12 col-md-10 col-lg-8 col-sm-10 v3-contentBox v3-transition-center"
-    style='align-self:flex-start;'>
+    <div class ="col-xs-12 col-md-10 col-lg-8 col-sm-10 v3-contentBox v3-transition-center custom-modal-container">
         <div class="pdf-header">
             <h3 class="pdf-title"><{activePdf}> for Energy and Health</h3>
         </div>
