fix(x2p6): update text

--- a/exercise6/pages/002.html
+++ b/exercise6/pages/002.html
@@ -4,8 +4,11 @@
     </template>
     <template slot="right">
         <page-title :title="pageTitle"></page-title>
-        <p>The fifth of Coach Mark's Great Eight is about your personal development. Your biggest asset is you. You are only as good as your mind provides.</p>
-        <p>Get coaching, mentoring and even meetings with people who are successful in your game. Create a learning hour where you read, watch and listen to experts and commentators on business and performance. Use Ted Talks, YouTube and read books. Grow yourself, and you grow your business.
+        <p>
+            The fifth of Coach Mark's Great Eight is about your personal development. Your biggest asset is you. You are only as good as your mind provides.
+        </p>
+        <p>
+            Get coaching, mentoring and even arrange meetings with people who are successful in your game. Create a learning hour where you read, watch and listen to experts and commentators on business and performance. Use Ted talks, YouTube and read books. Grow yourself, and you grow your business.
         </p>
     </template>
 </content-box>
