fix(ex:all): fix formatting in activitybox components

--- a/exercise1/pages/004.html
+++ b/exercise1/pages/004.html
@@ -1,7 +1,12 @@
 <activity-box>
-	<page-title-center :title="pageTitle"></page-title-center>
-	<p>Before we introduce you to Coach Mark’s eight activities, why not have a go and come up with your own eight activities for success. It will be interesting to see if there is alignment with your thinking and that of Coach Mark.
-</p>
-    <textbox id="page004a"></textbox>
+    <div class="row flex-center">
+        <div class="col-md-10 col-sm-12 col-lg-8 col-xs-12">
+			<page-title-center :title="pageTitle"></page-title-center>
+			<p>
+				Before we introduce you to Coach Mark’s eight activities, why not have a go and come up with your own eight activities for success. It will be interesting to see if there is alignment with your thinking and that of Coach Mark.
+			</p>
+			<textbox id="page004a"></textbox>
+		</div>
+	</div>
 </activity-box>
 
