--- a/exercise1/pages/007.html
+++ b/exercise1/pages/007.html
@@ -1,6 +1,10 @@
 <activity-box>
-	<page-title-center :title="pageTitle"></page-title-center>
-	<p>Take a moment to reflect on week three. Write a short paragraph with two critical learnings from week three. Mark shared his learnings, explain what resonated with you and why?</p>
-    <textbox id="page007a"></textbox>
+    <div class="row flex-center">
+        <div class="col-md-10 col-sm-12 col-lg-8 col-xs-12">
+			<page-title-center :title="pageTitle"></page-title-center>
+			<p>Take a moment to reflect on week three. Write a short paragraph with two critical learnings from week three. Mark shared his learnings, explain what resonated with you and why?</p>
+			<textbox id="page007a"></textbox>
+		</div>
+	</div>
 </activity-box>
 
