--- a/exercise3/pages/002.html
+++ b/exercise3/pages/002.html
@@ -1,12 +1,13 @@
-
 <activity-box type="Activity" two-column="true">
     <template slot="left">
-         <page-title :centered="false" :title="pageTitle"></page-title>
-      <p>The second of Coach Mark's Great Eight is about valuing yourself up. You know more than you think you do. You need to value your knowledge, your management skills and your business experience.</p>
+        <page-title :centered="false" :title="pageTitle"></page-title>
+        <p>
+            The second of Coach Mark's Great Eight is about valuing yourself up. You know more than you think you do. You need to value your knowledge, your management skills and your business experience.
+        </p>
         <textbox id="pg002" label="Do you value your current knowledge? Explain." placeholder=""></textbox>
-       
+    
     </template>
     <template slot="right">
-<image-block :alt="alt" :image=image :root=root></image-block>
+        <image-block :alt="alt" :image=image :root=root></image-block>
     </template>
 </activity-box>
