--- a/exercise4/pages/003.html
+++ b/exercise4/pages/003.html
@@ -1,11 +1,12 @@
 
 <activity-box type="Activity">
-
-  <page-title :centered="false" :title="pageTitle"></page-title>
-    <p>
-      In your business, there will be core activities that drive your business success. These activities will be the basics that eventually help you grow your business – things such as prospecting, administration, following up leads, coaching staff, communicating with customers and managing your database to name a few. Make sure these primary activities don't get compromised. Always maintain a high standard with them: they are the core foundation of your business.
-    </p>
-    <textbox id="pg002" label="How good are you at sticking to the basics? Explain below." placeholder=""></textbox>
-       
-
+  <div class="row flex-center">
+      <div class="col-md-10 col-sm-12 col-lg-8 col-xs-12">
+    <page-title :centered="false" :title="pageTitle"></page-title>
+      <p>
+        In your business, there will be core activities that drive your business success. These activities will be the basics that eventually help you grow your business – things such as prospecting, administration, following up leads, coaching staff, communicating with customers and managing your database to name a few. Make sure these primary activities don't get compromised. Always maintain a high standard with them: they are the core foundation of your business.
+      </p>
+      <textbox id="pg002" label="How good are you at sticking to the basics? Explain below." placeholder=""></textbox>
+    </div>
+  </div>
 </activity-box>
