--- a/exercise5/pages/003.html
+++ b/exercise5/pages/003.html
@@ -1,6 +1,10 @@
 <activity-box type="Activity">
-    <page-title :centered="true" :title="pageTitle"></page-title>
-    <p>Be inquisitive – It is your business.</p>
-    <p>It’s what you don’t know that can bring you down, so stay on top of your numbers all the time. Do not make decisions about technology, opportunities, diversification and business development unless you know your numbers.</p>
-    <textbox id="pg002" label="How would you rate yourself when it comes to knowing the numbers in your business or your role? Could you improve and if so how?" placeholder=""></textbox>
+    <div class="row flex-center">
+        <div class="col-md-10 col-sm-12 col-lg-8 col-xs-12">
+            <page-title :centered="true" :title="pageTitle"></page-title>
+            <p>Be inquisitive – It is your business.</p>
+            <p>It’s what you don’t know that can bring you down, so stay on top of your numbers all the time. Do not make decisions about technology, opportunities, diversification and business development unless you know your numbers.</p>
+            <textbox id="pg002" label="How would you rate yourself when it comes to knowing the numbers in your business or your role? Could you improve and if so how?" placeholder=""></textbox>
+        </div>
+    </div>
 </activity-box>
