--- a/exercise7/pages/003.html
+++ b/exercise7/pages/003.html
@@ -1,6 +1,11 @@
 <activity-box type="Activity">
-		<page-title :centered="true" :title="pageTitle"></page-title>
-    <p>It takes discipline to stay on task and keep your eye on the ball.  Every day ask yourself the question, “If I do this, will it grow my business?”
-    </p>
-    <textbox id="pg003" label="How would you rate your current abilities to stay on task? Explain the areas you do well in and areas for improvement." placeholder=""></textbox>
+  <div class="row flex-center">
+    <div class="col-md-10 col-sm-12 col-lg-8 col-xs-12">
+      <page-title :centered="true" :title="pageTitle"></page-title>
+      <p>
+        It takes discipline to stay on task and keep your eye on the ball.  Every day ask yourself the question, “If I do this, will it grow my business?”
+      </p>
+      <textbox id="pg003" label="How would you rate your current abilities to stay on task? Explain the areas you do well in and areas for improvement." placeholder=""></textbox>
+    </div>
+  </div>
 </activity-box>
