--- a/exercise7/pages/004.html
+++ b/exercise7/pages/004.html
@@ -1,7 +1,12 @@
 <activity-box type="Activity">
-    <page-title :centered="true" :title="pageTitle"></page-title>
-    <p>There are two primary activities in your business:</p>
-    <p>One – Return on investment – the things that will grow your people, your turnover, profits and your business as a whole
-    </p>
-    <textbox id="pg004" label="Provide an example of what you currently do to grow your business." placeholder=""></textbox>
+    <div class="row flex-center">
+        <div class="col-md-10 col-sm-12 col-lg-8 col-xs-12">
+            <page-title :centered="true" :title="pageTitle"></page-title>
+            <p>There are two primary activities in your business:</p>
+            <p>
+                One – Return on investment – the things that will grow your people, your turnover, profits and your business as a whole
+            </p>
+            <textbox id="pg004" label="Provide an example of what you currently do to grow your business." placeholder=""></textbox>
+        </div>
+    </div>
 </activity-box>
