--- a/exercise8/pages/003.html
+++ b/exercise8/pages/003.html
@@ -1,6 +1,11 @@
 <activity-box type="Activity">
-		<page-title :centered="true" :title="pageTitle"></page-title>
-    <p>Stress and poor time-management is your worst enemy – they can even kill you.  Agree with yourself to take care of your body and mind by resting correctly, eating properly and doing some physical activity every week without your cell phone.
-    </p>
-    <textbox id="pg003" label="How well do you currently look after yourself? Be honest with yourself?  The truth is the best approach for acknowledging that change is needed." placeholder=""></textbox>
+  <div class="row flex-center">
+    <div class="col-md-10 col-sm-12 col-lg-8 col-xs-12">
+      <page-title :centered="true" :title="pageTitle"></page-title>
+      <p>
+        Stress and poor time-management is your worst enemy – they can even kill you.  Agree with yourself to take care of your body and mind by resting correctly, eating properly and doing some physical activity every week without your cell phone.
+      </p>
+      <textbox id="pg003" label="How well do you currently look after yourself? Be honest with yourself?  The truth is the best approach for acknowledging that change is   needed." placeholder=""></textbox>
+    </div>
+  </div>
 </activity-box>
