--- a/exercise1/pages/006.html
+++ b/exercise1/pages/006.html
@@ -1,27 +1,31 @@
 <activity-box type="Results">
-    <page-title-center :title="pageTitle"></page-title-center>
-    <p>Below is your business performance ratings from week one. It is essential to keep these front of mind so that when you continue through the course, you are thinking about them. </p>
-	<p class="mbb">Coach Mark wants you to improve in the areas that need some work, so take some time now to review them, reflect and then continue with week Four.</p>
-    <table class="table">
-        <thead>
-            <tr>
-                <th scope="col"><strong>Question</strong></th>
-                <th scope="col"><strong>Rating</strong></th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr v-for="question in questions">
-                <th scope="row">
-                    <p>
-                        <{question.question}>
-                    </p>
-                </th>
-                <td>
-                    <p>
-                        <{question.answer}>
-                    </p>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="row flex-center">
+        <div class="col-md-10 col-sm-12 col-lg-8 col-xs-12">
+            <page-title-center :title="pageTitle"></page-title-center>
+            <p>Below is your business performance ratings from week one. It is essential to keep these front of mind so that when you continue through the course, you are thinking about them. </p>
+            <p class="mbb">Coach Mark wants you to improve in the areas that need some work, so take some time now to review them, reflect and then continue with week Four.</p>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col"><strong>Question</strong></th>
+                        <th scope="col"><strong>Rating</strong></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr v-for="question in questions">
+                        <th scope="row">
+                            <p>
+                                <{question.question}>
+                            </p>
+                        </th>
+                        <td>
+                            <p>
+                                <{question.answer}>
+                            </p>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </activity-box>
