--- a/exercise10/pages/003.html
+++ b/exercise10/pages/003.html
@@ -1,6 +1,9 @@
 <activity-box type="Task">
-    <page-title-center :title="pageTitle"></page-title-center>
-    <p>Okay, you have made significant progress, remember to ensure you have completed all assignments, tasks and activities. Here a checklist for you to mark off all tasks before kicking into week five.</p>
-    <ticks :learnt=learnt></ticks>
-
+    <div class="row flex-center">
+        <div class="col-md-10 col-sm-12 col-lg-8 col-xs-12">
+            <page-title-center :title="pageTitle"></page-title-center>
+            <p>Okay, you have made significant progress, remember to ensure you have completed all assignments, tasks and activities. Here a checklist for you to mark off all tasks before kicking into week five.</p>
+            <ticks :learnt=learnt></ticks>
+        </div>
+    </div>
 </activity-box>
