--- a/exercise5/pages/005.html
+++ b/exercise5/pages/005.html
@@ -1,8 +1,12 @@
 <activity-box type="Activity">
-    <page-title :centered="false" :title="pageTitle"></page-title>
-    <p>Now it is time for you to find out if you really know your numbers.</p>
-
-<p>Talk to your accountant, your banker or your financial advisor and make sure your numbers are up-to-date and that everything can be tracked on a daily basis.
-</p>
-    <textbox id="pg002" label="Explain your plan for having your numbers available to you frequently and accurately. If you already feel confident you do, then explain your plan to improve in this area." placeholder=""></textbox>
+    <div class="row flex-center">
+        <div class="col-md-10 col-sm-12 col-lg-8 col-xs-12">
+            <page-title :centered="false" :title="pageTitle"></page-title>
+            <p>Now it is time for you to find out if you really know your numbers.</p>
+            <p>
+                Talk to your accountant, your banker or your financial advisor and make sure your numbers are up-to-date and that everything can be tracked on a daily basis.
+            </p>
+            <textbox id="pg002" label="Explain your plan for having your numbers available to you frequently and accurately. If you already feel confident you do, then explain your plan to improve in this area." placeholder=""></textbox>
+        </div>
+    </div>
 </activity-box>
