--- a/exercise7/pages/005.html
+++ b/exercise7/pages/005.html
@@ -1,7 +1,10 @@
 <activity-box type="Activity">
-		<page-title :centered="true" :title="pageTitle"></page-title>
-    <p>There are two primary activities in your business:</p>
-
-<p>Two – Distractions – the things that do the opposite to One.</p>
-    <textbox id="pg005" label="Provide an example of a distraction to your business." placeholder=""></textbox>
+    <div class="row flex-center">
+        <div class="col-md-10 col-sm-12 col-lg-8 col-xs-12">
+		    <page-title :centered="true" :title="pageTitle"></page-title>
+                <p>There are two primary activities in your business:</p>
+                <p>Two – Distractions – the things that do the opposite to One.</p>
+                <textbox id="pg005" label="Provide an example of a distraction to your business." placeholder=""></textbox>
+            </div>
+        </div>
 </activity-box>
