--- a/exercise8/pages/009.html
+++ b/exercise8/pages/009.html
@@ -1,4 +1,8 @@
 <activity-box>
-    <page-title-center :title="pageTitle"></page-title-center>
-    <minimal-form :questions-wrap=questionsWrap></minimal-form>
+    <div class="row flex-center">
+        <div class="col-md-10 col-sm-12 col-lg-8 col-xs-12">
+            <page-title-center :title="pageTitle"></page-title-center>
+            <minimal-form :questions-wrap=questionsWrap></minimal-form>
+        </div>
+    </div>
 </activity-box>
